refactor(优惠券): 重构用户优惠券分页查询和过滤逻辑
- 使用 PageResult.of 替代直接构造 PageResult 对象
- 将 var 替换为具体类型 PageResult<UserCoupon>
- 使用 collect(Collectors.toList()) 替代 toList()